--- a/euanon/euanon/euanon/View/CategoriaPage.xaml
+++ b/euanon/euanon/euanon/View/CategoriaPage.xaml
@@ -2,10 +2,25 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="euanon.View.CategoriaPage"
-             BackgroundColor="#E0F7FA">
+             BackgroundColor="#E0F7FA"
+             Title="{Binding Title}">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Pagina em construção ;)" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
+            <Label Text="Puxe para atualizar" FontSize="Micro" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
+            <ListView SeparatorColor="CadetBlue"
+                      IsPullToRefreshEnabled="True"
+                      HasUnevenRows="True"
+                      IsRefreshing="{Binding IsBusy}"
+                      ItemsSource="{Binding Posts}"
+                      ItemSelected="listFeed_ItemSelected"
+                      RefreshCommand="{Binding RefreshCommand}"
+                      x:Name="listFeed">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Text="{Binding Titulo}" Detail="{Binding Texto}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
