--- a/euanon/euanon/euanon/View/ConfiguracaoPage.xaml
+++ b/euanon/euanon/euanon/View/ConfiguracaoPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="euanon.View.ConfiguracaoPage"
-             BackgroundColor="#E0F7FA">
+             BackgroundColor="#E0F7FA"
+             Title="Configuração">
     <ContentPage.Content>
         <StackLayout Padding="60">
             <Label Text="Nosso aplicativo permite posts e leitura offline e por isso guardados dados em seu celular! Você pode limpar esses dados por aqui!" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
