--- a/euanon/euanon/euanon/View/MainPage.xaml
+++ b/euanon/euanon/euanon/View/MainPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:euanon"
              x:Class="euanon.MainPage"
-              Title="                           Eu, Anônimo.">
+              Title="                           Eu, Anônimo">
     <MasterDetailPage.Master>
         <local:MasterPage x:Name="masterPage" />
     </MasterDetailPage.Master>
