--- a/euanon/euanon/euanon/View/LoginFace.xaml
+++ b/euanon/euanon/euanon/View/LoginFace.xaml
@@ -9,6 +9,6 @@
         <Image Source="logo2escrito.png" WidthRequest="150" HeightRequest="150" VerticalOptions="Center" HorizontalOptions="Center" Margin="30"/>
         <Label Text="Sem likes, sem shares, apenas nossa expressão, pura e sem segundas intenções." FontSize="Medium" VerticalOptions="CenterAndExpand" HorizontalOptions="Center"/>
         <Label Text="Para acessar, precisamos que logue na sua conta do facebook, mas fique tranquilo, nada será postado em seu nome." FontSize="Micro" TextColor="Gray"/>
-        <Button Command="{Binding LoginCommand}" Text="Logar com facebook" BackgroundColor="Transparent" FontSize="Medium" TextColor="Black"/>
+        <Button Command="{Binding LoginCommand}" Text="Entrar com Facebook" BackgroundColor="#3b5998" FontAttributes="Italic" TextColor="#ECEFF1"/>
     </StackLayout>
 </ContentPage>
