--- a/euanon/euanon/euanon/View/AboutPage.xaml
+++ b/euanon/euanon/euanon/View/AboutPage.xaml
@@ -16,13 +16,22 @@
                 <Label Text="Por: Eu, Anônimo." FontSize="Micro"/>
 
                 <!--Termos e condições-->
-                <Label Text="Termos e Condições" FontSize="Medium" TextColor="Silver" HorizontalOptions="Center" VerticalOptions="Center"/>
+                <Label Text="Termos e Condições" FontSize="Medium" TextColor="Gray" HorizontalOptions="Center" VerticalOptions="Center"/>
                 <Label Text=">Iremos usar seu Facebook apenas para validação, adquirir avatar e nome, e para evitar spams." FontSize="Micro" Margin="15,10,0,0"/>
                 <Label Text=">O usuário que postar algo que incite violência de forma gratuita e ofensiva, será banido permanentemente do aplicativo sem aviso prévio." FontSize="Micro" Margin="15,01,0,0"/>
                 <Label Text=">Ao postar, seu texto será de domínio público." FontSize="Micro" Margin="15,01,0,0"/>
+                
+                
+                <!--Politica de privacidade-->
+                <Label Text="Política de privacidade" FontSize="Medium" TextColor="Gray" HorizontalOptions="Center" VerticalOptions="Center" Margin="0,10,0,0"/>
+                <Label Text="Segurança de armazenamento e utilização" HorizontalOptions="Center" VerticalOptions="Center" FontSize="Small" TextColor="Silver"/>
+                <Label Text="Entre os tipos de dados pessoais que este aplicativo recolhe, por si só ou por meio de terceiros, estão: e-mail, nome, sobrenome, cookies e dados de uso." FontSize="Micro" Margin="15,10,0,0"/>
+                <Label Text="Os dados pessoais podem ser livremente fornecidos pelo usuário, ou coletados automaticamente quando se utiliza este aplicativo. O não fornecimento de determinados dados pessoais pode tornar impossível para este aplicativo prestar os seus serviços." FontSize="Micro" Margin="15,10,0,0"/>
+                <Label Text="Os dados pessoais do usuário somente serão utilizados por meio deste serviço(este aplicativo) e confirma-se que os dados do proprietário não serão divulgados para terceiros." FontSize="Micro" Margin="15,10,0,0"/>
+
+
                 <Label Text="Desenvolvido por Ruan Araújo - github.com/RuanAraujo/EuAnonimo" FontSize="Micro" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" Margin="25,25,25,0"/>
                 <Label Text="Versão BETA" FontSize="Micro" VerticalOptions="EndAndExpand" HorizontalOptions="Center"/>
-
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
